spade-tests/src/snapshots/spade_tests__wordlength_inference__simple_multiple_addition_one.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f(a: int<4>) -> int<0> {
  a + a + a + a
}
entity main(clk: clock, rst: bool) -> int<0> { f(1) }


error: Expected type int<4>, got int<5>
  ┌─ testinput:2:3
  │
2 │   a + a + a + a
  │   ^^^^^ Expected int<4> here


